状态栏测试

--- a/远程组件加载方案.md
+++ b/远程组件加载方案.md
@@ -45,6 +45,18 @@
    https://testingcf.jsdelivr.net/gh/用户名/仓库名/文件路径.html
    ```
 
+### 3. 如何更新组件（网页端操作）
+
+如果你不使用 IDE，可以直接在 GitHub 网页端修改文件：
+
+1. **进入编辑模式**：打开你的文件，点击右上角的 **✏️ 铅笔图标** (Edit file)。
+2. **修改代码**：直接在网页编辑器中修改代码。
+3. **提交更改**：点击右上角的 **Commit changes...** 按钮。
+4. **选择提交方式**：
+   - ✅ **Commit directly to the main branch**（直接提交到主分支）：**选这个！** 这是最快的方式，适合个人维护的小项目。
+   - ❌ **Create a new branch...**（创建新分支并发起合并请求）：这是多人协作时的流程，自己改代码不需要选这个。
+5. 点击绿色 **Commit changes** 按钮确认。
+
 ---
 
 ## 三、正则配置
@@ -97,15 +109,49 @@
 
 ## 五、注意事项
 
-### CDN 缓存
+### CDN 缓存与版本控制
 
-jsDelivr 有缓存机制，更新 GitHub 后可能需要几分钟才能生效。
+jsDelivr 会缓存你的文件。如果你刚更新了 GitHub，但酒馆里还是旧版，这是因为 CDN 还没刷新。
 
-强制刷新缓存方法：使用带版本号的链接
+#### 解决方法：使用带版本号的链接
 
-```
-https://testingcf.jsdelivr.net/gh/用户名/仓库名@main/文件路径.html
-```
+在 URL 中仓库名后面加上 `@版本` 即可。
+
+1.  **引用分支（开发用）**：
+
+    ```
+    https://testingcf.jsdelivr.net/gh/用户名/仓库名@main/文件路径.html
+    ```
+
+    - `@main` 表示引用主分支的最新代码。
+    - 注意：即使加了 `@main`，CDN 也可能有短暂缓存。
+
+2.  **引用具体提交（强制刷新 - 最稳）**：
+
+    ```
+    https://testingcf.jsdelivr.net/gh/用户名/仓库名@8a2b3c/文件路径.html
+    ```
+
+    - `@8a2b3c` 是你 GitHub 提交记录（Commit）的哈希值前几位。
+    - **原理**：每次提交的哈希值都不一样，CDN 会把它当作一个全新的文件，绝对不会有缓存问题。
+    - **获取方式**：在 GitHub 文件页面的右上角 History 或 commits 中可以看到一串字符（如 `8a2b3c4...`），复制前 7 位即可。
+
+3.  **引用发行版（稳定版）**：
+
+    ```
+    https://testingcf.jsdelivr.net/gh/用户名/仓库名@v1.0/文件路径.html
+    ```
+
+    - 如果你在 GitHub 发布了 Release（发行版），可以用标签名。适合发布给别人用的稳定版本。
+
+#### 最佳实践建议
+
+- **给用户的正则**：使用 **`@main`** 或 **`@v1.0`**（稳定版）。
+  - **优点**：用户只需要配置一次正则，以后你更新 GitHub，用户的酒馆会自动（延迟）获取新版，**完全不需要用户手动去改正则**。
+  - **缺点**：你推送代码后，用户可能要等一段时间（通常几分钟到几小时）才能看到变化。这是正常的 CDN 缓存机制。
+
+- **你自己测试**：使用 **`@commit哈希`**。
+  - **场景**：当你刚改完代码，想立刻在酒馆里看效果，又不想等缓存刷新时，临时改一下你自己酒馆里的正则链接。测试没问题了，再推送到 GitHub，用户那边慢慢就会生效。
 
 ### 正则必须带 `<body>` 标签
 
@@ -145,5 +191,15 @@ https://testingcf.jsdelivr.net/gh/用户名/仓库名@main/文件路径.html
   $('body').load('https://testingcf.jsdelivr.net/gh/你的用户名/你的仓库名/你的文件.html')
 </script>
 </body>
+```
+```
+```dy>
+<script>
+  $('body').load('https://testingcf.jsdelivr.net/gh/你的用户名/你的仓库名/你的文件.html')
+</script>
+</body>
+```
+```
+```
 ```
 ```
